update test api
